# U-chat

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  run-all.sh  unhidra_enroll.py
.github/workflows/: release.yml
auth-api/: Cargo.toml
auth-api/src/: main.rs
chat-service/src/: main.rs
chat-service/src/handlers/: channels.rs  files.rs
client/: Cargo.toml
client/src/: main.rs
docs/status/: PROGRESS.md  RESEARCH.md  TODO.md
event-hub-service/src/: main.rs
gateway-service/: Cargo.toml
gateway-service/src/: main.rs  mqtt_bridge_impl.rs  state.rs  ws_handler.rs
helm/unhidra/: values-prod.yaml
proto/: Cargo.toml
server/: Cargo.toml
tauri-client/: Cargo.toml
tauri-client/src/: main.rs
tests/: integration_e2e.rs  integration_tests.rs
unhidra-vcs-gui/: package-lock.json
