[package]
name = "unhidra-tauri-client"
version = "0.3.0"
edition = "2021"
description = "Unhidra desktop client built with Tauri"
authors = ["Unhidra Team"]
license = "MIT"

[dependencies]
tauri = { version = "1.5", features = ["api-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
tokio-tungstenite = { version = "0.23", features = ["native-tls"] }
futures-util = "0.3"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.0", features = ["v4"] }

# Internal crates
e2ee = { path = "../e2ee" }
jwt-common = { path = "../jwt-common" }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri = { version = "1.5", features = ["api-all", "system-tray"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[lints]
workspace = true
